--- a/2/index.html
+++ b/2/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-section info4 cid-rWq91V90PT" data-bg-video="https://www.youtube.com/watch?v=_tPZjXA5xFA" id="info4-u">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section info4 cid-rWq91V90PT" data-bg-video="https://www.youtube.com/watch?v=_tPZjXA5xFA" id="info4-u">
 
     
 
@@ -272,7 +272,7 @@
             </div>
             <!--Right-->
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJr1Y8Z16PVg0RZb6dXtT77aU" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
