--- a/bareitot.html
+++ b/bareitot.html
@@ -17,17 +17,17 @@ function MakeArray(n) {
 }
 monthNames = new MakeArray(12)
 monthNames[1] = "Janvier"
-monthNames[2] = "Février"
+monthNames[2] = "Fï¿½vrier"
 monthNames[3] = "Mars"
 monthNames[4] = "Avril"
 monthNames[5] = "Mai"
 monthNames[6] = "Juin"
 monthNames[7] = "Juillet"
-monthNames[8] = "Aôut"
+monthNames[8] = "Aï¿½ut"
 monthNames[9] = "Septembre"
 monthNames[10] = "Octobre"
 monthNames[11] = "Novembre"
-monthNames[12] = "Décembre"
+monthNames[12] = "Dï¿½cembre"
 dayNames = new MakeArray(7)
 dayNames[1] = "Dimanche"
 dayNames[2] = "Lundi"
@@ -81,9 +81,9 @@ function setHomePage(homepage,la_url_es) {
 <!--
 
 function popupWin() {
-text =  "<html>\n<head>\n<title>Aécf News</title>\n<body>\n";
+text =  "<html>\n<head>\n<title>Aï¿½cf News</title>\n<body>\n";
 text += "<center>\n";
-text += "Site en test, toutes les rubriques ne sont pas encore ouvertes, merci de votre compréhension ! ";
+text += "Site en test, toutes les rubriques ne sont pas encore ouvertes, merci de votre comprï¿½hension ! ";
 text += "</center>\n</body>\n</html>\n";
 setTimeout('windowProp(text)', 2000); 		// delay 3 seconds before opening
 }
@@ -390,7 +390,7 @@ span.MsoFootnoteReference1 {mso-style-noshow:yes;
                                       144 rue du    Mus&eacute;e <br>
                                       40330 - BRASSEMPOUY <br>
                                       <br>
-                                      Tel./Fax.: <strong>05.58.89.02.02</strong> Portable: <strong>06.08.35.50.53 ou <strong>06.08.35.50.</strong>54 </strong></span><br>
+                                      Tel./Fax.: <strong>05.40.77.22.44</strong> Portable: <strong>06.08.35.50.53 ou <strong>06.08.35.50.</strong>54 </strong></span><br>
                     <br>
                   </div>
                 </DIV>
@@ -426,7 +426,7 @@ document.write(customDateString())
                 <br>
               </div><table width="100%" border="0">
                 <tr bgcolor="#003366">
-                  <td colspan="3" bgcolor="#68B41C"><p align="center"><strong>&laquo; Bareit&ocirc;t &raquo; 7 personnes + 1 enfant </strong></p></td>
+                  <td colspan="3" bgcolor="#68B41C"><p align="center"><strong>&laquo; Bareit&ocirc;t &raquo; 10 personnes</strong></p></td>
                 </tr>
                 <tr>
                   <td colspan="3"><div align="left"><br>
@@ -436,7 +436,7 @@ document.write(customDateString())
                   <td colspan="3"><div align="center">
                     <table cellspacing="0" cellpadding="0" hspace="0" vspace="0" width="540" height="120">
                       <tr>
-                        <td width="538" height="120" align="left" valign="top"><p><strong>&laquo; Bareit&ocirc;t &raquo; 8 personnes + 1 enfant<br>
+                        <td width="538" height="120" align="left" valign="top"><p><strong>&laquo; Bareit&ocirc;t &raquo; 10 personnes (8 adultes + 2 enfants)<br>
 </strong><br>
                           Dans le corps de b&acirc;timent principal, la plus ancienne    partie 
                           (1750) offre le cadre agr&eacute;able des vieilles demeures. <br>
@@ -466,9 +466,9 @@ d'angle, wc et rangements.
     <td width="405" height="35" align="left" valign="top"><p align="center"><strong><br>
       &laquo;&nbsp;Bare&iuml;tot&nbsp;&raquo;</strong><br>
       <br>
-      Forfait week-end&nbsp; 2  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;350 &euro;</strong><br>
-      Forfait week-end&nbsp; 3  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 490 &euro;</strong><br>
-      Journ&eacute;e suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
+      Forfait week-end&nbsp; 2  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;450 &euro;</strong><br>
+      Forfait week-end&nbsp; 3  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 650 &euro;</strong><br>
+      Journ&eacute;e suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;190</strong><strong> &euro;</strong><br>
       <strong>&nbsp;&nbsp; </strong></p>
     <p>*sans petit dejeuner</p></td>
   </tr>
