--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@ function MakeArray(n) {
 }
 monthNames = new MakeArray(12)
 monthNames[1] = "Janvier"
-monthNames[2] = "Février"
+monthNames[2] = "Fï¿½vrier"
 monthNames[3] = "Mars"
 monthNames[4] = "Avril"
 monthNames[5] = "Mai"
 monthNames[6] = "Juin"
 monthNames[7] = "Juillet"
-monthNames[8] = "Aôut"
+monthNames[8] = "Aï¿½ut"
 monthNames[9] = "Septembre"
 monthNames[10] = "Octobre"
 monthNames[11] = "Novembre"
-monthNames[12] = "Décembre"
+monthNames[12] = "Dï¿½cembre"
 dayNames = new MakeArray(7)
 dayNames[1] = "Dimanche"
 dayNames[2] = "Lundi"
@@ -81,9 +81,9 @@ function setHomePage(homepage,la_url_es) {
 <!--
 
 function popupWin() {
-text =  "<html>\n<head>\n<title>Aécf News</title>\n<body>\n";
+text =  "<html>\n<head>\n<title>Aï¿½cf News</title>\n<body>\n";
 text += "<center>\n";
-text += "Site en test, toutes les rubriques ne sont pas encore ouvertes, merci de votre compréhension ! ";
+text += "Site en test, toutes les rubriques ne sont pas encore ouvertes, merci de votre comprï¿½hension ! ";
 text += "</center>\n</body>\n</html>\n";
 setTimeout('windowProp(text)', 2000); 		// delay 3 seconds before opening
 }
@@ -390,7 +390,7 @@ span.MsoFootnoteReference1 {mso-style-noshow:yes;
                                       144 rue du    Mus&eacute;e <br>
                                       40330 - BRASSEMPOUY <br>
                                       <br>
-                                      Tel./Fax.: <strong>05.58.89.02.02</strong> Portable: <strong>06.08.35.50.53 ou <strong>06.08.35.50.</strong>54 </strong></span><br>
+                                      Tel./Fax.: <strong>05.40.77.22.44</strong> Portable: <strong>06.08.35.50.53 ou <strong>06.08.35.50.</strong>54 </strong></span><br>
                     <br>
                   </div>
                 </DIV>
