--- a/bareitot.html
+++ b/bareitot.html
@@ -466,9 +466,9 @@ d'angle, wc et rangements.
     <td width="405" height="35" align="left" valign="top"><p align="center"><strong><br>
       &laquo;&nbsp;Bare&iuml;tot&nbsp;&raquo;</strong><br>
       <br>
-      Forfait week-end&nbsp; 2  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;450 &euro;</strong><br>
-      Forfait week-end&nbsp; 3  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 650 &euro;</strong><br>
-      Journ&eacute;e suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;190</strong><strong> &euro;</strong><br>
+      Forfait week-end&nbsp; 1  nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;480 &euro;</strong><br>
+      Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 720 &euro;</strong><br>
+      Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;190</strong><strong> &euro;</strong><br>
       <strong>&nbsp;&nbsp; </strong></p>
     <p>*sans petit dejeuner</p></td>
   </tr>
