--- a/lachambredeladame.html
+++ b/lachambredeladame.html
@@ -472,9 +472,9 @@ document.write(customDateString())
                           <td width="382" height="62" align="left" valign="top"><p align="center"><br>
                               <strong>La &laquo;&nbsp;Chambre de la Dame&nbsp;&raquo; </strong><br>
                               <br>
-                              Forfait week-end&nbsp; 2  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;160 &euro;</strong><br>
-Forfait week-end&nbsp; 3  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 220 &euro;</strong><br>
-Journ&eacute;e suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;70</strong><strong> &euro;</strong><br>
+                              Forfait week-end&nbsp;   nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;160 &euro;</strong><br>
+Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 250 &euro;</strong><br>
+Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;90</strong><strong> &euro;</strong><br>
 <strong>&nbsp;&nbsp; </strong></p>                          
                             <p>*sans petit dejeuner</p>
                           </td>
