--- a/bareitou.html
+++ b/bareitou.html
@@ -465,9 +465,9 @@ document.write(customDateString())
                               <td width="358" height="62" align="left" valign="top"><p align="center"><strong><br>
                               &laquo;&nbsp;Bare&iuml;tou&nbsp;&raquo; </strong><br>
                                 <br>
-                                Forfait week-end&nbsp; 2  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;350 &euro;</strong><br>
-Forfait week-end&nbsp; 3  jours :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 490 &euro;</strong><br>
-Journ&eacute;e suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
+                                Forfait week-end&nbsp;   nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;380 &euro;</strong><br>
+Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 570 &euro;</strong><br>
+Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
 <strong>&nbsp;&nbsp; </strong></p>                              
                                 <p>*sans petit dejeuner&nbsp;</p>
                               </td>
