--- a/lachambredeladame.html
+++ b/lachambredeladame.html
@@ -474,9 +474,9 @@ document.write(customDateString())
                               <br>
                               Forfait week-end&nbsp;   nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;160 &euro;</strong><br>
 Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 250 &euro;</strong><br>
-Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;90</strong><strong> &euro;</strong><br>
+Nuit suppl&eacute;mentaire:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;90</strong><strong> &euro;</strong><br>
 <strong>&nbsp;&nbsp; </strong></p>                          
-                            <p>*sans petit dejeuner</p>
+                    
                           </td>
                         </tr>
                       </table>
