--- a/bareitot.html
+++ b/bareitot.html
@@ -468,9 +468,9 @@ d'angle, wc et rangements.
       <br>
       Forfait week-end&nbsp; 1  nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;480 &euro;</strong><br>
       Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 720 &euro;</strong><br>
-      Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;190</strong><strong> &euro;</strong><br>
+      Nuit suppl&eacute;mentaire:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;190</strong><strong> &euro;</strong><br>
       <strong>&nbsp;&nbsp; </strong></p>
-    <p>*sans petit dejeuner</p></td>
+  </td>
   </tr>
 </table>
 <br>
