--- a/bareitou.html
+++ b/bareitou.html
@@ -467,9 +467,9 @@ document.write(customDateString())
                                 <br>
                                 Forfait week-end&nbsp;   nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;380 &euro;</strong><br>
 Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp; 570 &euro;</strong><br>
-Nuit suppl&eacute;mentaire*:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
+Nuit suppl&eacute;mentaire:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
 <strong>&nbsp;&nbsp; </strong></p>                              
-                                <p>*sans petit dejeuner&nbsp;</p>
+                              
                               </td>
                             </tr>
                           </table>
