--- a/bareitou.html
+++ b/bareitou.html
@@ -465,7 +465,7 @@ document.write(customDateString())
                               <td width="358" height="62" align="left" valign="top"><p align="center"><strong><br>
                               &laquo;&nbsp;Bare&iuml;tou&nbsp;&raquo; </strong><br>
                                 <br>
-                                Forfait week-end&nbsp;   nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;380 &euro;</strong><br>
+                                Forfait week-end&nbsp; 1 nuit :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp; 380 &euro;</strong><br>
 Forfait week-end&nbsp; 2  nuits :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>&nbsp;&nbsp;&nbsp;570 &euro;</strong><br>
 Nuit suppl&eacute;mentaire:<strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;150</strong><strong> &euro;</strong><br>
 <strong>&nbsp;&nbsp; </strong></p>                              
